@@ -1,3 +1,11 @@
+Fri Mar 12 11:19:54 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * TAO_IDL/be/be_visitor_connector/executor_ami_exh.cpp:
+          Fixed argument not used warning
+
+        * util/utl_decllist.cpp:
+          Zap old documentation
+
 Thu Mar 11 22:53:51 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>
 
         * TAO_IDL/be/be_visitor_connector/connector_ami_exh.cpp:
